--- a/src/styles/portfolio.css
+++ b/src/styles/portfolio.css
@@ -532,6 +532,10 @@ pre code {
   margin-left: auto;
 }
 
+.flex {
+  display: flex;
+}
+
 @media (min-width: 576px) {
   .container-sm, .container {
     max-width: 540px;
@@ -9940,7 +9944,7 @@ h3 {
   }
 }
 .page-section {
-  padding: 3rem 0;
+  padding: 1.5rem 0;
 }
 .page-section .page-section-heading {
   font-size: 2.25rem;
@@ -10103,6 +10107,7 @@ h3 {
 }
 
 .portfolio .portfolio-item {
+  background-color: #fff;
   cursor: pointer;
   position: relative;
   display: block;
@@ -10166,13 +10171,33 @@ h3 {
   border-bottom: 0.25rem solid #64a19d;
 }
 
-
 .crystal-card {
-  background: rgba(26, 188, 156, 0.80 );
-  box-shadow: 0 8px 32px 0 rgba( 31, 38, 135, 0.37 );
   backdrop-filter: blur( 2.0px );
   -webkit-backdrop-filter: blur( 2.0px );
   border-radius: 10px;
-  border: 1px solid rgba( 255, 255, 255, 0.18 );
   color: #ffffff;
+}
+
+.text-xs {
+  font-size: 0.5rem;
+}
+
+.text-sm {
+  font-size: 0.75rem;
+}
+
+.text-md {
+  font-size: 1rem;
+}
+
+.text-base {
+  font-size: 2rem;
+}
+
+.text-lg {
+  font-size: 2.5rem;
+}
+
+.text-xl {
+  font-size: 3rem;
 }
